--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
 <style>
 /* ================ */
 /*		DEFAULT		*/
@@ -36,12 +36,12 @@ figure{
 	margin:0;
 }
 p,h1{
-	font-family: 'Inter', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 p.coming-soon{
 	color: #ff1715;
-	font-weight: normal;
-	font-weight: 500;
+	font-weight: bold;
+	font-weight: 600;
 	font-size: 2em;
 	margin: 0;
 }
@@ -62,6 +62,11 @@ p.sub-copy{
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+.bx-logo-wrap{
+	padding: 4%;
+	background: #2b84c3;
+}
+
 @media screen and (min-width: 768px){
 	.bx-break-on-desktop{
 		display: block;
@@ -71,7 +76,7 @@ p.sub-copy{
 		font-size: 1vw;
 	}
 	.bx-component-two-columns > div{
-		float: left;
+		float: right;
 	}
 	.bx-component-two-columns > div:nth-of-type(1){
 		width:37%;
@@ -115,13 +120,13 @@ p.sub-copy{
 	<section class="bx-component bx-component-two-columns bx-component-two-columns-12">
 		<div>
 			<figure class="w3-content w3-section">
-			  <img class="mySlides" src="https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/little-girl-blue-dress-modeling.jpg?t=1637903865&_gl=1*b5578j*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwMzg4My42MA">
-			  <img class="mySlides" src="https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/men-in-jacket-pointing.jpg?t=1637903866&_gl=1*b5578j*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwMzg4My42MA">
-			  <img class="mySlides" src="https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/women-celebrating-glitter.jpg?t=1637903867&_gl=1*1kdkr6k*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwMzg4My42MA">
-			  <img class="mySlides" src="https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/women-shopping-online-at-boton-computer.jpg?t=1637903867&_gl=1*1kdkr6k*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwMzg4My42MA">
-			  <img class="mySlides" src="https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/office-space-lobby.jpg?t=1637903866&_gl=1*ow1g1z*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwMzg4My42MA..">
+			  <img class="mySlides" src="images/image-1.jpg">
+			  <img class="mySlides" src="images/image-2.jpg">
+			  <img class="mySlides" src="images/image-3.jpg">
+			  <img class="mySlides" src="images/image-4.jpg">
+			  <img class="mySlides" src="images/image-5.jpg">
 			</figure>
-			<figure><img src="https://cdn.shopify.com/s/files/1/0556/9150/9911/files/BonTon-logo_480x480.png?v=1637694675" alt="BON-TON logo" /></figure>
+			<figure class="bx-logo-wrap"><img src="images/Younkers-logo.png" alt="Younkers logo" /></figure>
 		</div>
 		<div>
 			<div>
@@ -138,8 +143,8 @@ p.sub-copy{
 					</p>
 				</div>
 				<div>
-					<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=U6mqQh"></script>
-					<div class="klaviyo-form-QUybud"></div>
+					<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=UGU5yt"></script>
+					<div class="klaviyo-form-UF2FcB"></div>
 				</div>
 			</div>
 		</div>
