--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0556/9150/9911/files/BonTon_Primary_Icon_Flower_Red.png?v=1625744650" type="image/png">
 <style>
 /* ================ */
 /*		DEFAULT		*/
@@ -58,9 +59,10 @@ p.sub-copy{
 	font-size: 1.5em;
 }
 .bx-component-two-columns > div:nth-of-type(2){
-	background: url('https://cdn11.bigcommerce.com/s-mcqdekjvq7/product_images/uploaded_images/background.png?t=1637904998&_gl=1*bgv71j*_ga*Mzg4MjE1NzU3LjE2Mzc5MDA0MTA.*_ga_WS2VZYPC6G*MTYzNzkwMDQwOS4xLjEuMTYzNzkwNTAwNS40NQ');
+	background: url('images/bg.png');
 	background-size: cover;
 	background-repeat: no-repeat;
+	background-position: 146% 100%;
 }
 .bx-logo-wrap{
 	padding: 4%;
