updates font family and color

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;500&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="//cdn.shopify.com/s/files/1/0556/9150/9911/files/BonTon_Primary_Icon_Flower_Red.png?v=1625744650" type="image/png">
 <style>
 /* ================ */
@@ -37,10 +37,10 @@ figure{
 	margin:0;
 }
 p,h1{
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Inter', sans-serif;
 }
 p.coming-soon{
-	color: #ff1715;
+	color: #D83934;
 	font-weight: bold;
 	font-weight: 600;
 	font-size: 2em;
@@ -66,7 +66,7 @@ p.sub-copy{
 }
 .bx-logo-wrap{
 	padding: 4%;
-	background: #2b84c3;
+	background: #D83934;
 }
 
 @media screen and (min-width: 768px){
