--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 	<section class="bx-component bx-component-two-columns bx-component-two-columns-12">
 		<div>
 			<figure class="w3-content w3-section">
-			  <img class="mySlides" src="images/image-1.jpg">
-			  <img class="mySlides" src="images/image-2.jpg">
-			  <img class="mySlides" src="images/image-3.jpg">
-			  <img class="mySlides" src="images/image-4.jpg">
-			  <img class="mySlides" src="images/image-5.jpg">
+			  <img class="mySlides" src="images/img-1.jpg">
+			  <img class="mySlides" src="images/img-2.jpg">
+			  <img class="mySlides" src="images/img-3.jpg">
+			  <img class="mySlides" src="images/img-4.jpg">
+			  <img class="mySlides" src="images/img-5.jpg">
 			</figure>
 			<figure class="bx-logo-wrap"><img src="images/Younkers-logo.png" alt="Younkers logo" /></figure>
 		</div>
