font weight comming soon

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	}
 	p.coming-soon{
 		color: #D83934;
-		font-weight: bold;
+		font-weight: normal;
 		font-weight: 500;
 		font-size: 2em;
 		margin: 0;
