--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 			float: right;
 		}
 		.bx-component-two-columns > div:nth-of-type(1){
-			width:37%;
+			width: 34%;
+    		padding: 2% 2% 0 0%;
 		}
 		.bx-component-two-columns > div:nth-of-type(2){
 			display: -webkit-box;
